--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,4 +1,10 @@
-preset: laravel
-
-disabled:
-  - single_class_element_per_statement
+php:
+    preset: laravel
+    disabled:
+        - unused_use
+        - single_class_element_per_statement
+js:
+    finder:
+        not-name:
+            - webpack.mix.js
+css: true
