--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "illuminate/support": "^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "^5.0",
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
