--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,11 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "^7.0"
+        "ext-json": "*",
+        "illuminate/support": "^7.0",
+        "laravel/ui": "^2.1",
+        "laravelcollective/html": "^6.1",
+        "livewire/livewire": "^1.3"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
@@ -41,10 +45,7 @@
         "laravel": {
             "providers": [
                 "Microboard\\Providers\\MicroboardCoreServiceProvider"
-            ],
-            "aliases": {
-                "Microboard": "Microboard\\Microboard"
-            }
+            ]
         }
     }
 }
