--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,13 @@
     "require": {
         "php": "^7.1",
         "ext-json": "*",
-        "illuminate/support": "^7.0",
-        "laravel/ui": "^2.1",
-        "laravelcollective/html": "^6.1",
+        "illuminate/support": "~5.8.0|^6.0|^7.0|^8.0",
         "livewire/livewire": "^1.3"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^5.0",
-        "phpunit/phpunit": "^8.5"
+        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0|^4.0|^5.0",
+        "phpunit/phpunit": "^7.5.15|^8.4|^9.0"
     },
     "autoload": {
         "psr-4": {
