Simplifying travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,18 @@
+branches:
+    only:
+        - master
+
 language: php
 
 php:
-  - 7.1
-  - 7.2
-  - 7.3
-  - 7.4
-
-env:
-  matrix:
-    - COMPOSER_FLAGS="--prefer-lowest"
-    - COMPOSER_FLAGS=""
+    - 7.1
+    - 7.2
+    - 7.3
+    - 7.4
 
 before_script:
-  - travis_retry composer self-update
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+    - composer install --no-interaction
 
-script:
-  - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-
-after_script:
-  - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
+cache:
+    directories:
+        - vendor
